src/test/ui/macros/macros-nonfatal-errors.stderr
error: the `#[default]` attribute may only be used on unit enum variants
  --> $DIR/macros-nonfatal-errors.rs:14:5
   |
LL |     #[default]
   |     ^^^^^^^^^^

error: the `#[default]` attribute may only be used on unit enum variants
  --> $DIR/macros-nonfatal-errors.rs:19:36
   |
LL | struct DefaultInnerAttrTupleStruct(#[default] ());
   |                                    ^^^^^^^^^^

error: the `#[default]` attribute may only be used on unit enum variants
  --> $DIR/macros-nonfatal-errors.rs:23:1
   |
LL | #[default]
   | ^^^^^^^^^^

error: the `#[default]` attribute may only be used on unit enum variants
  --> $DIR/macros-nonfatal-errors.rs:27:1
   |
LL | #[default]
   | ^^^^^^^^^^

error: the `#[default]` attribute may only be used on unit enum variants
  --> $DIR/macros-nonfatal-errors.rs:37:11
   |
LL |     Foo = #[default] 0,
   |           ^^^^^^^^^^

error: the `#[default]` attribute may only be used on unit enum variants
  --> $DIR/macros-nonfatal-errors.rs:38:14
   |
LL |     Bar([u8; #[default] 1]),
   |              ^^^^^^^^^^

error: no default declared
  --> $DIR/macros-nonfatal-errors.rs:43:10
   |
LL | #[derive(Default)]
   |          ^^^^^^^
   |
   = help: make a unit variant default by placing `#[default]` above it
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error: multiple declared defaults
  --> $DIR/macros-nonfatal-errors.rs:49:10
   |
LL | #[derive(Default)]
   |          ^^^^^^^
...
LL |     Foo,
   |     --- first default
LL |     #[default]
LL |     Bar,
   |     --- additional default
LL |     #[default]
LL |     Baz,
   |     --- additional default
   |
   = note: only one variant can be default
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `#[default]` attribute does not accept a value
  --> $DIR/macros-nonfatal-errors.rs:61:5
   |
LL |     #[default = 1]
   |     ^^^^^^^^^^^^^^
   |
   = help: try using `#[default]`

error: multiple `#[default]` attributes
  --> $DIR/macros-nonfatal-errors.rs:69:5
   |
LL |     #[default]
   |     ---------- `#[default]` used here
LL |     #[default]
   |     ---------- `#[default]` used again here
LL |     Foo,
   |     ^^^
   |
   = note: only one `#[default]` attribute is needed
help: try removing this
  --> $DIR/macros-nonfatal-errors.rs:68:5
   |
LL |     #[default]
   |     ^^^^^^^^^^

error: multiple `#[default]` attributes
  --> $DIR/macros-nonfatal-errors.rs:79:5
   |
LL |     #[default]
   |     ---------- `#[default]` used here
LL |     #[default]
   |     ---------- `#[default]` used again here
...
LL |     Foo,
   |     ^^^
   |
   = note: only one `#[default]` attribute is needed
help: try removing these
  --> $DIR/macros-nonfatal-errors.rs:76:5
   |
LL |     #[default]
   |     ^^^^^^^^^^
LL |     #[default]
   |     ^^^^^^^^^^
LL |     #[default]
   |     ^^^^^^^^^^

error: the `#[default]` attribute may only be used on unit enum variants
  --> $DIR/macros-nonfatal-errors.rs:86:5
   |
LL |     Foo {},
   |     ^^^
   |
   = help: consider a manual implementation of `Default`

error: default variant must be exhaustive
  --> $DIR/macros-nonfatal-errors.rs:94:5
   |
LL |     #[non_exhaustive]
   |     ----------------- declared `#[non_exhaustive]` here
LL |     Foo,
   |     ^^^
   |
   = help: consider a manual implementation of `Default`

error: asm template must be a string literal
  --> $DIR/macros-nonfatal-errors.rs:99:10
   |
LL |     asm!(invalid);
   |          ^^^^^^^

error: inline assembly must be a string literal
  --> $DIR/macros-nonfatal-errors.rs:100:15
   |
LL |     llvm_asm!(invalid);
   |               ^^^^^^^

error: concat_idents! requires ident args
  --> $DIR/macros-nonfatal-errors.rs:102:5
   |
LL |     concat_idents!("not", "idents");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: argument must be a string literal
  --> $DIR/macros-nonfatal-errors.rs:104:17
   |
LL |     option_env!(invalid);
   |                 ^^^^^^^

error: expected string literal
  --> $DIR/macros-nonfatal-errors.rs:105:10
   |
LL |     env!(invalid);
   |          ^^^^^^^

error: expected string literal
  --> $DIR/macros-nonfatal-errors.rs:106:10
   |
LL |     env!(foo, abr, baz);
   |          ^^^

error: environment variable `RUST_HOPEFULLY_THIS_DOESNT_EXIST` not defined
  --> $DIR/macros-nonfatal-errors.rs:107:5
   |
LL |     env!("RUST_HOPEFULLY_THIS_DOESNT_EXIST");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `env` (in Nightly builds, run with -Z macro-backtrace for more info)

error: format argument must be a string literal
  --> $DIR/macros-nonfatal-errors.rs:109:13
   |
LL |     format!(invalid);
   |             ^^^^^^^
   |
help: you might be missing a string literal to format with
   |
LL |     format!("{}", invalid);
   |             +++++

error: argument must be a string literal
  --> $DIR/macros-nonfatal-errors.rs:111:14
   |
LL |     include!(invalid);
   |              ^^^^^^^

error: argument must be a string literal
  --> $DIR/macros-nonfatal-errors.rs:113:18
   |
LL |     include_str!(invalid);
   |                  ^^^^^^^

error: couldn't read $DIR/i'd be quite surprised if a file with this name existed: $FILE_NOT_FOUND_MSG (os error 2)
  --> $DIR/macros-nonfatal-errors.rs:114:5
   |
LL |     include_str!("i'd be quite surprised if a file with this name existed");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `include_str` (in Nightly builds, run with -Z macro-backtrace for more info)

error: argument must be a string literal
  --> $DIR/macros-nonfatal-errors.rs:115:20
   |
LL |     include_bytes!(invalid);
   |                    ^^^^^^^

error: couldn't read $DIR/i'd be quite surprised if a file with this name existed: $FILE_NOT_FOUND_MSG (os error 2)
  --> $DIR/macros-nonfatal-errors.rs:116:5
   |
LL |     include_bytes!("i'd be quite surprised if a file with this name existed");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `include_bytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: trace_macros! accepts only `true` or `false`
  --> $DIR/macros-nonfatal-errors.rs:118:5
   |
LL |     trace_macros!(invalid);
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 27 previous errors

